# lucusengine2

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md
app/: main.cpp
cmake/: CMakeLists.txt
cmake/common/: CMakeLists.txt
cmake/liblucus/: CMakeLists.txt
cmake/liblucus/lucus-core/: CMakeLists.txt
cmake/liblucus/lucus-graphics/: CMakeLists.txt
cmake/liblucus/lucus-math/: CMakeLists.txt
cmake/liblucus/lucus-sim/: CMakeLists.txt
content/assets/: cube.gltf
content/assets/geometry/: scene.gltf
content/scripts/: main.as
content/scripts/tests/: cube_gpu_test.as  cube_load_test.as  cube_test.as  one_texture_test.as  scene_bindless_texture_deferred_test.as  scene_bindless_texture_test.as  scene_light_deferred_test.as  scene_light_texture_deferred_test.as  scene_light_texture_test.as  scene_load_test.as  triangle_gpu_test.as  triangle_test.as  two_windows_test.as
scripts/: .build.bat  .build.sh  build_linux.sh  build_mac.sh  build_win.bat  compile_dx12.bat  compile_metal.sh  compile_vulkan.sh  run_tests.bat  run_tests.sh  tests.list
shaders/: cube.slang  deferred_lighting.slang  nounb_simple.slang  shadow_map.slang  simple.slang  simple_lit.slang  simple_lit_deferred.slang  simple_texture.slang  simple_texture_lit.slang  simple_texture_lit_deferred.slang  simple_texture_unlit.slang  simple_texture_unlit_deferred.slang  simple_unlit.slang  simple_unlit_deferred.slang  triangle.slang
shaders/common/: bindless_textures.slang  defines.slang  light.slang  structs.slang
shaders/dx12/: triangle.hlsl
shaders/metal/: triangle.metal
src/lucus-core/: angelscript_utils.hpp  application.cpp  application.hpp  application_info.cpp  application_info.hpp  bind_core.cpp  bind_core.hpp  commandline_args.cpp  commandline_args.hpp  core_types.hpp  engine.cpp  engine.hpp  engine_info.cpp  engine_info.hpp  filesystem.cpp  filesystem.hpp  intrusive_ptr.hpp  object.cpp  object.hpp  script_manager.cpp  script_manager.hpp  singleton.hpp
src/lucus-graphics/: bind_graphics.cpp  bind_graphics.hpp  camera.cpp  camera.hpp  command_buffer.hpp  device.hpp  dynamic_rhi.hpp  glfw_include.hpp  gltf_utils.cpp  gltf_utils.hpp  lights.cpp  lights.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  pch.hpp  render_config.hpp  render_object.hpp  render_types.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  swapchain.hpp  texture.cpp  texture.hpp  texture_manager.cpp  texture_manager.hpp  tools.cpp  tools.h  window.cpp  window.hpp  window_manager.cpp  window_manager.hpp
src/lucus-graphics/dx12/: dx_buffer.cpp  dx_buffer.hpp  dx_device.cpp  dx_device.hpp  dx_dynamic_rhi.cpp  dx_dynamic_rhi.hpp  dx_pch.hpp  dx_pipeline_state.cpp  dx_pipeline_state.hpp  dx_render_types.cpp  dx_render_types.hpp  dx_renderer.cpp  dx_renderer.hpp  dx_swapchain.cpp  dx_swapchain.hpp  dx_utils.cpp  dx_utils.hpp  dx_viewport.cpp  dx_viewport.hpp  dx_window_context.cpp  dx_window_context.hpp
src/lucus-graphics/metal/: m_buffer.hpp  m_buffer.mm  m_device.hpp  m_device.mm  m_dynamic_rhi.hpp  m_dynamic_rhi.mm  m_pch.hpp  m_pipeline_state.hpp  m_pipeline_state.mm  m_render_types.hpp  m_render_types.mm  m_renderer.hpp  m_renderer.mm  m_viewport.hpp  m_viewport.mm  m_window_context.hpp  m_window_context.mm
src/lucus-graphics/vulkan/: vk_buffer.cpp  vk_buffer.hpp  vk_commandbuffer_pool.cpp  vk_commandbuffer_pool.hpp  vk_device.cpp  vk_device.hpp  vk_dynamic_rhi.cpp  vk_dynamic_rhi.hpp  vk_pch.hpp  vk_pipeline_state.cpp  vk_pipeline_state.hpp  vk_render_types.cpp  vk_render_types.hpp  vk_renderer.cpp  vk_renderer.hpp  vk_swapchain.cpp  vk_swapchain.hpp  vk_utils.cpp  vk_utils.hpp  vk_viewport.cpp  vk_viewport.hpp  vk_window_context.cpp  vk_window_context.hpp  vulkan_renderer.cpp  vulkan_renderer.hpp
src/lucus-math/: bind_math.cpp  bind_math.hpp  math_types.cpp  math_types.hpp
src/lucus-pch/: pch.hpp
src/lucus-sim/: engine.cpp  engine.hpp  pch.hpp
